# CellularAutomataCpp

./: README.md
GameOfLife/: Board.cpp  Board.h  CMakeLists.txt  StartStopButton.cpp  StartStopButton.h  main.cpp
